src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-omT-ofT-dwP0.25-dhF500-b-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\nopen floating: true\ndefault column width: P0.25\ndefault window height: F500\nborder on\nwant fullscreen: BN"
expression: snapshot
---
initial configure:
size: 312 × 500, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
