src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-omT-ofT-dwP0.25-dhF500-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\nopen floating: true\ndefault column width: P0.25\ndefault window height: F500\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 320 × 500, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
